--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 ✔ Merge watcher and debug stories? @done(19-02-15 19:25)
 ✔ Change database migration to typescript. @done(19-02-15 10:30)
 ✔ Rename database to migrations. @done(19-02-15 10:43)
+☐ Set node_modules path to outside of mount point so you don't have to blow away your own node_modules
 ☐ Add tests to migrations
 ☐ Add schema
 ☐ Add normal user for accessing schema.
